@@ -76,16 +76,6 @@ export PATH=/usr/local/bin/openjdk/jdk-19.jdk/Contents/Home/bin:/opt/homebrew/op
 mvn clean package
 echo-50k % java --enable-preview -ea -cp target/conn-scale-1.0.0.jar conn50k.EServer 0.0.0.0 9000 50 16192 16
 
-Args[host=0.0.0.0, port=9000, portCount=50, backlog=16192, bufferSize=16]
-[0] connections=0, messages=0
-[1013] connections=0, messages=0
-[2018] connections=0, messages=0
-[3024] connections=0, messages=0
-[4030] connections=0, messages=0
-[5035] connections=0, messages=0
-[6041] connections=0, messages=0
-[7046] connections=0, messages=0
-[8052] connections=0, messages=0
 ```
 
 Client:
@@ -94,19 +84,6 @@ export JAVA_HOME=/usr/local/bin/openjdk/jdk-19.jdk/Contents/Home
 export PATH=/usr/local/bin/openjdk/jdk-19.jdk/Contents/Home/bin:/opt/homebrew/opt/python@3.10/bin:/opt/homebrew/opt/python@3.10/bin:/opt/homebrew/opt/python@3.10/bin:/opt/homebrew/opt/openjdk/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin
 
 echo-50k % java --enable-preview -ea -cp target/conn-scale-1.0.0.jar conn50k.EClient 127.0.0.1 9000 5000
-Args[host=127.0.0.1, port=9000, portCount=5000, numConnections=1, socketTimeout=10000, warmUp=1000, sleep=1000]
-[0] connections=0, messages=0
-[1012] connections=4982, messages=4982
-[2017] connections=5000, messages=9993
-[3023] connections=5000, messages=15035
-[4028] connections=5000, messages=20042
-[5034] connections=5000, messages=25052
-[6037] connections=5000, messages=30052
-[7043] connections=5000, messages=35052
-[8048] connections=5000, messages=40052
-[9049] connections=5000, messages=45052
-[10051] connections=5000, messages=50052
-[11052] connections=5000, messages=55052
 
 ```
 
@@ -124,81 +101,3 @@ The server launched with a passive server port range of [9000, 9049].
 The client launched with the same server target port range and a connections-per-port count of 10,000, for a total of 500,000 target connections.
 
 
-```bash
-$ ./jdk-19/bin/java --enable-preview -ea -cp conn-scale-1.0.0.jar conn50k.EServer 0.0.0.0 9000 50 16192 16
-Args[host=0.0.0.0, port=9000, portCount=50, backlog=16192, bufferSize=16]
-[0] connections=0, messages=0
-[1015] connections=0, messages=0
-...
-[17020] connections=2412, messages=2412
-[18020] connections=10317, messages=10316
-...
-[2106644] connections=500000, messages=17414982
-[2107645] connections=500000, messages=17423544
-```
-
-```bash
-[ec2-user@ip-10-39-196-215 ~]$ ./jdk-19/bin/java --enable-preview -ea -cp conn-scale-1.0.0.jar conn50k.EClient 10.39.197.143 9000 50 10000 30000 60000 60000
-Args[host=10.39.197.143, port=9000, portCount=50, numConnections=10000, socketTimeout=30000, warmUp=60000, sleep=60000]
-[0] connections=131, messages=114
-[1014] connections=4949, messages=4949
-[2014] connections=13248, messages=13246
-...
-[2091751] connections=500000, messages=17428105
-[2092751] connections=500000, messages=17432046
-```
-
----
-
-The `ss` command reflects that both client and server had 500,000+ sockets open.
-
-Server:
-```
-[ec2-user@ip-10-39-197-143 ~]$ ss -s
-Total: 500233 (kernel 0)
-TCP:   500057 (estab 500002, closed 0, orphaned 0, synrecv 0, timewait 0/0), ports 0
-
-Transport Total     IP        IPv6
-*	  0         -         -        
-RAW	  0         0         0        
-UDP	  8         4         4        
-TCP	  500057    5         500052   
-INET	  500065    9         500056   
-FRAG	  0         0         0 
-```
-
-Client:
-```
-[ec2-user@ip-10-39-196-215 ~]$ ss -s
-Total: 500183 (kernel 0)
-TCP:   500007 (estab 500002, closed 0, orphaned 0, synrecv 0, timewait 0/0), ports 0
-
-Transport Total     IP        IPv6
-*	  0         -         -        
-RAW	  0         0         0        
-UDP	  8         4         4        
-TCP	  500007    5         500002   
-INET	  500015    9         500006   
-FRAG	  0         0         0 
-```
-
----
-
-The server Java process used 2.3 GB of committed resident memory and 8.4 GB of virtual memory.
-After running for 35.12m, it used 14m42s of CPU time.
-
-The client Java process used 2.8 GB of committed resident memory and 8.9 GB of virtual memory.
-After running for 34.88m, it used 25m19s of CPU time.
-
-
-Server:
-```
-COMMAND                                                                                              %CPU     TIME   PID %MEM   RSS    VSZ
-./jdk-19/bin/java --enable-preview -ea -cp conn-scale-1.0.0.jar conn50k.EServer 36.7 00:12:42 18432 14.5 2317180 8434320
-```
-
-Client:
-```
-COMMAND                                                                                              %CPU     TIME   PID %MEM   RSS    VSZ
-./jdk-19/bin/java --enable-preview -ea -cp conn-scale-1.0.0.jar conn50k.EClient 73.9 00:25:19 18120 17.9 2848356 8901320
-```
